--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
         </div>
       </div>
-    <div class="headshot"><div class="img-box"><img src="/image/headshot1-removebg-preview.png"></div></div></section>
+    <div class="headshot"><div class="img-box"><img src="headshot1.png"></div></div></section>
 
       <section id="skills" class="skills-section">
         <div class="text">
